@@ -17,6 +17,7 @@ patool - simple manager for file archives of various types
 .SH SYNOPSIS
  \fBpatool\fP (\fBextract\fP|\fBlist\fP|\fBtest\fP) [\fIoptions\fP] <\fIarchive-file\fP>...
  \fBpatool\fP \fBcreate\fP [\fIoptions\fP] <\fIarchive-file\fP> [\fIfiles\fP...]
+ \fBpatool\fP \fBdiff\fP [\fIoptions\fP] <\fIarchive1\fP> <\fIarchive2\fP>
  \fBpatool\fP \fBformats\fP [\fIoptions\fP]
 .SH DESCRIPTION
 Various archive types can be created, extracted, tested and listed by
@@ -38,6 +39,7 @@ It relies on helper applications to handle those archive formats
   \fBpatool test --verbose dist.tar.gz\fP
   \fBpatool list package.deb\fP
   \fPpatool create --verbose myfiles.zip file1.txt dir/\fP
+  \fBpatool diff release1.0.tar.gz release2.0.zip\fP
 .SH COMMANDS
 Several commands and options are available.
 .SS \fBextract\fP
@@ -82,6 +84,11 @@ Test files in an archive.
 .TP
 \fB\-v\fP, \fB\-\-verbose\fP
 Verbose archive testing (if the helper application supports it).
+.TP
+\fB\-\-help\fP
+Show help for this command.
+.SS \fBdiff\fP
+Show differences between two archives.
 .TP
 \fB\-\-help\fP
 Show help for this command.
